--- a/ss05_variable/index4.html
+++ b/ss05_variable/index4.html
@@ -5,17 +5,25 @@
     <title>Title</title>
 </head>
 <body>
-    <script>
-        let a = 1;
-        let b = "1";
-        let c = "1";
+<script>
+    let a = 1;
+    let b = "1";
+    let c = "1";
 
-        a += 5; //a = a + 5
-        document.write(a);
+    a += 5; //a = a + 5
+    document.write(a);
 
-        // document.write(c === b);
+    //a = 5
+    let y = a++ + ++a; //6 + 6
+    //a = 6
+    //a = 7
 
-        // document.write(false || false);
-    </script>
+    // document.write(c === b);
+
+    // document.write(false || false);
+
+
+
+</script>
 </body>
 </html>
